--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                                                 return true;
                                             }
                                         </script> -->
-                                        <!--Slider Function
+                                        Slider Function
                                         <script type="text/javascript">
                                             jQuery(document).ready(function () {
                                                 jQuery('.tp-banner').show().revolution({
@@ -674,7 +674,7 @@
                                         <!--End Slider Function-->
 
 
-                                        <!-- Mirrored from html.iwthemes.com/coopbank/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Feb 2021 04:07:48 GMT -->
+                                        <!-- Mirrored from html.iwthemes.com/coopbank/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Feb 2021 04:07:48 GMT
 
                                     </table>
                                 </form>
