--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
     
-                 <select hidden="" id="Layout" name="Layout" style="width:100px">
+                 <select id="Layout" name="Layout" style="width:100px" readonly="" hidden="true">
                     <option value="102815">BanKO - Negosyoko Loan Application</option></select>
     <!-- layout-->
     <div id="layout" class="layout-semiboxed">
