--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     
                  <select id="Layout" name="Layout" style="width:100px" readonly="" hidden="true">
-                    <option value="102815">BanKO - Negosyoko Loan Application</option></select>
+                    <selected option value="102815">BanKO - Negosyoko Loan Application</option></select>
     <!-- layout-->
     <div id="layout" class="layout-semiboxed">
         <!-- fond-header-->
