--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
 
     
-                 <select id="Layout" name="Layout" style="width:100px" readonly="" hidden="true">
+                 <select id="Layout" name="Layout" style="width:100px" hidden="true">
                     <option value="102815" selected>BanKO - Negosyoko Loan Application</option></select>
     <!-- layout-->
-    <div id="layout" class="layout-semiboxed">
+    <div id="layout1" class="layout-semiboxed">
         <!-- fond-header-->
         <div id="fond-header" class="fond-header pattern-header-02 pattern-header-01 color-header-2 color-header-1" style="background-color: #FFFFFF"></div>
         <!-- End fond-header-->
