--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     
                  <select id="Layout" name="Layout" style="width:100px" hidden="true">
-                    <option value="102815" selected>BanKO - Negosyoko Loan Application</option></select>
+                    <option selected value="102815" >BanKO - Negosyoko Loan Application</option></select>
     <!-- layout-->
     <div id="layout1" class="layout-semiboxed">
         <!-- fond-header-->
