--- a/index.html
+++ b/index.html
@@ -47,12 +47,6 @@
         <div class="status" style="display: none;">&nbsp;</div>
     </div>
     <!--End Preloader-->
-
-
-
-    
-                 <select id="Layout" name="Layout" style="width:100px" hidden="true">
-                    <option selected value="102815" >BanKO - Negosyoko Loan Application</option></select>
     <!-- layout-->
     <div id="layout1" class="layout-semiboxed">
         <!-- fond-header-->
@@ -347,7 +341,9 @@
                                     <input type="text"data-autoid="Company" name="Company" class="form-control"
                                         style="font-weight: 700;margin-bottom: 20px;color: #999b9c; padding: inherit;">
                                     </input>
-                                    </select><select id="StatusCode" name="StatusCode" style="width:100px" readonly="" hidden="true">
+                                    <select id="Layout" name="Layout" style="width:100px" hidden="true">
+                    <                    option selected value="102815" >BanKO - Negosyoko Loan Application</option></select>
+                                   <select id="StatusCode" name="StatusCode" style="width:100px" readonly="" hidden="true">
                                         <option hidden="" value="100003" selected="">New</option>
                                     <input type="submit"  name="submit" id="submit" value="Submit" class="btn" style="background-color: #034f84; font-size: initial; " onclick="return IsValidForm();">
                                     <div class="content_info">
