--- a/index.html
+++ b/index.html
@@ -328,14 +328,14 @@
                                         <label title="Mobile Number" class="form-element__label">Mobile Number</label>
                                         <input type="text" data-autoid="LE_PHONE" name="LE_PHONE" placeholder="Mobile Number" class="form-control">
 
-                                        <div class="form-element form-element--labelLeft filed-wrapper-cnt  " data-autoid="LE_DATEOFBIRTH"><label title="Date of Birth" class="form-element__label" data-autoid="LE_DATEOFBIRTH_lbl">Date of Birth</label>
+<!--                                         <div class="form-element form-element--labelLeft filed-wrapper-cnt  " data-autoid="LE_DATEOFBIRTH"><label title="Date of Birth" class="form-element__label" data-autoid="LE_DATEOFBIRTH_lbl">Date of Birth</label>
                                             <div class="form-element__control">
                                                 <div class="date-field-container">
                                                     <div class="field relative w-100 onlyTextBox"><a title="Today's date" class="field__item help-icon" data-autoid="LE_DATEOFBIRTH_today"><i class="icon-acid-calendar-event"></i></a><span class="field__item help-icon"><a title="Calendar" id="LE_DATEOFBIRTH" class="mid gray"><i class="icon  icon-acid-calendar"></i></a></span></div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <input type="text" id="LE_DATEOFBIRTH_ctrl" name="LE_DATEOFBIRTH" value="" placeholder="Date Of Birth" class="form-control">
+                                        <input type="text" id="LE_DATEOFBIRTH_ctrl" name="LE_DATEOFBIRTH" value="" placeholder="Date Of Birth" class="form-control"> -->
                             
                                      <label title="Company" class="form-element__label" data-autoid="Company">Company</label>
                                     <input type="text"data-autoid="Company" name="Company" class="form-control"
