--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 <head>
     <!-- Basic -->
     <meta charset="utf-8">
-    <title>Asset Lead Capture</title>
-    <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="CoopBank - Responsive HTML5 Template">
-    <meta name="author" content="iwthemes.com">
+    <title>BanKo Loan Application</title>
+    <meta name="description" content="BUSINESSNEXT - Banking Form">
 
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
