--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
 
                                         <option value="39">Online</option>
                                     </select>
+                                    <label title="Salutation" class="form-element__label">Salutation</label>
                                     <select id="Salutation" name="Salutation" class="form-control">
                                         <option value="0"></option>
                                         <option value="1">Mr.</option>
