--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                         <option value="39">Online</option>
                                     </select>
                                     <label title="Salutation" class="form-element__label">Salutation</label>
-                                    <select id="Salutation" name="Salutation" class="form-control">
+                                    <select id="Salutation" name="Salutation" class="form-control" placeholder="Salutation" class="form-control">
                                         <option value="0"></option>
                                         <option value="1">Mr.</option>
                                         <option value="2">Ms.</option>
@@ -372,7 +372,7 @@
                                     <label title="Company" class="form-element__label"
                                         data-autoid="Company">Company</label>
                                     <input type="text" data-autoid="Company" name="Company" class="form-control"
-                                        style="font-weight: 700;margin-bottom: 20px;color: #999b9c; padding: inherit;">
+                                        style="font-weight: 700;margin-bottom: 20px;color: #999b9c; padding: inherit;" placeholder="Company" class="form-control">
                                     </input>
                                     <select id="Layout" name="Layout" style="width:100px" hidden="true">
                                         <option selected value="102815">BanKO - Negosyoko Loan Application</option>
