--- a/index.html
+++ b/index.html
@@ -349,8 +349,9 @@
                                         placeholder="Last Name" class="form-control">
                                     <!-- <input type="text" id="cust_1751" name="cust_1751"
                                         placeholder="Loan Amount" class="form-control"> -->
-
-
+                                    <label title="Email ID" class="form-element__label">Email ID</label>
+                                    <input type="text" name="LE_EMAIL" class="form-control" maxlength="510" data-autoid="LE_EMAIL_ctrl" value="">
+                                    
                                     <label title="Mobile Number" class="form-element__label">Mobile Number</label>
                                     <input type="text" data-autoid="LE_PHONE" name="LE_PHONE"
                                         placeholder="Mobile Number" class="form-control">
