--- a/index.html
+++ b/index.html
@@ -350,14 +350,14 @@
                                     <!-- <input type="text" id="cust_1751" name="cust_1751"
                                         placeholder="Loan Amount" class="form-control"> -->
                                     <label title="Email ID" class="form-element__label">Email ID</label>
-                                    <input type="text" name="LE_EMAIL" class="form-control" maxlength="510" data-autoid="LE_EMAIL_ctrl" value="">
+                                    <input type="text" name="LE_EMAIL" class="form-control" maxlength="510" id="EMAIL_ctrl" value="">
                                     
                                     <label title="Mobile Number" class="form-element__label">Mobile Number</label>
-                                    <input type="text" data-autoid="LE_PHONE" name="LE_PHONE"
+                                    <input type="text" id="PHONE" name="PHONE"
                                         placeholder="Mobile Number" class="form-control">
 
-                                    <div class="form-element form-element--labelLeft filed-wrapper-cnt  " data-autoid="LE_DATEOFBIRTH"><label
-                                            title="Date of Birth" class="form-element__label" data-autoid="LE_DATEOFBIRTH_lbl">Date of Birth</label>
+                                    <div class="form-element form-element--labelLeft filed-wrapper-cnt  " id="LE_DATEOFBIRTH"><label
+                                            title="Date of Birth" class="form-element__label" id="LE_DATEOFBIRTH_lbl">Date of Birth</label>
                                         <div class="form-element__control">
                                             <div class="date-field-container">
                                                 <div class="field relative w-100 onlyTextBox"><a title="Today's date" class="field__item help-icon"
