--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                     <!-- <input type="text" id="cust_1751" name="cust_1751"
                                         placeholder="Loan Amount" class="form-control"> -->
                                     <label title="Email ID" class="form-element__label">Email ID</label>
-                                    <input type="text" name="EMAIL" class="form-control" maxlength="510" id="EMAIL_ctrl" value="">
+                                    <input type="text" name="EMAIL" class="form-control" maxlength="510" >
                                     
                                     <label title="Mobile Number" class="form-element__label">Mobile Number</label>
                                     <input type="text" id="PHONE" name="PHONE"
