--- a/index.html
+++ b/index.html
@@ -375,6 +375,16 @@
                                     <input type="text" data-autoid="Company" name="Company" class="form-control"
                                         style="font-weight: 700;margin-bottom: 20px;color: #999b9c; padding: inherit;" placeholder="Company" class="form-control">
                                     </input>
+
+<!--                                     \<div class="form-element form-element--labelLeft filed-wrapper-cnt  " data-autoid="cust_4195"><label title="Loan Amount Required" class="form-element__label" data-autoid="cust_4195_lbl">Loan Amount Required</label><div class="form-element__control"><div class="field relative w-100"><input class="textbox field__item" thousandspacing="3" data-autoid="cust_4195_ctrl" type="tel" value="" inputmode="numeric"></div></div></div>
+ -->
+                                     <label title="Loan Amount" class="form-element__label"
+                                        data-autoid="cust_4195">Loan Amount</label>
+                                    <input type="text" data-autoid="cust_4195" class="form-control"
+                                        style="font-weight: 700;margin-bottom: 20px;color: #999b9c; padding: inherit;" placeholder="Loan Amount Required" class="form-control">
+                                    </input>
+                                    
+                                    
                                     <select id="Layout" name="Layout" style="width:100px" hidden="true">
                                         <option selected value="102815">BanKO - Negosyoko Loan Application</option>
                                     </select>
