--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <!-- End Content Breadcumbs And Slide-->
 
                         <!-- Content Tabs Section-->
-                        <div class="col-md-4 col-lg-3" style="margin-top: 20px; background-color: #0a3c5f;">
+                        <div class="col-md-4 col-lg-3" style="margin-top: 20px; background-color: #0a3c5f;height: 800px;" >
 
                             <!-- tab-content-->
                             <div class="tab-content">
