--- a/index.html
+++ b/index.html
@@ -489,8 +489,9 @@
                                                         return false;
                                                     return true;
                                                 }
-                                            </script> -->
-                                            Slider Function
+                                            </script> 
+<!--                                             -->
+<!--                                             Slider Function --> -->
                                             <script type="text/javascript">
                                                 jQuery(document).ready(function () {
                                                     jQuery('.tp-banner').show().revolution({
