--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="content-central">
             <!-- Nav-->
             <nav id="menu">
-                <div class="navbar yamm navbar-default" style="background-color: #0a3c5f;">
+                <div class="navbar yamm navbar-default" style="background-color: #b11116;">
                     <div class="container">
                         <div class="row">
                             <div class="navbar-header">
@@ -301,7 +301,7 @@
                         <!-- End Content Breadcumbs And Slide-->
 
                         <!-- Content Tabs Section-->
-                        <div class="col-md-4 col-lg-3" style="margin-top: 20px; background-color: #0a3c5f;height: 800px;" >
+                        <div class="col-md-4 col-lg-3" style="margin-top: 20px; background-color: #b11116;height: 800px;" >
 
                             <!-- tab-content-->
                             <div class="tab-content">
